# zaptui

./: .gitignore  Cargo.toml  INK_MIGRATION_PLAN.md  LAUNCHER_GUIDE.md  MIGRATION_NOTES.md  Makefile  README.md  RENDERING_FIX.md  build.ps1  config.example.toml  install-macos.sh  install.ps1  install.sh  package-lock.json  package.json  run.sh  zaptui  zaptui-wrapper
.github/workflows/: cross-platform-ci.yml
.trunk/: trunk.yaml
docs/: DEV-QUICKSTART.md  INSTALL-LINUX.md  INSTALL-MACOS.md  INSTALL-WINDOWS.md  chat-loading-timeout-fix.md  configuration.md  dev-modes-explained.md  dev-quick-ref.md  dev-setup-summary.md  development-workflow.md  installation.md  real-time-sync.md  sync-before-after.md  troubleshooting.md
scripts/: cleanup.sh  dev-tmux.sh  dev.sh  install.sh  restart.sh  uninstall-macos.sh  uninstall.ps1  uninstall.sh  zaptui-linux  zaptui-local.ps1  zaptui-macos  zaptui.bat  zaptui.ps1
src/: config.rs  emoji-filter.js  main.rs  ui.js
src/ui/: app.rs  mod.rs  theme.rs
src/ui-ink/components/: App.mjs  ChatList.mjs  ChatListItem.mjs  MessageInput.mjs  MessageItem.mjs  MessageList.mjs  QRCodeView.mjs  StatusBar.mjs
src/ui-ink/hooks/: useMessages.mjs  useWhatsApp.mjs
src/ui-ink/utils/: formatters.mjs
src/ui/components/: mod.rs  qr_view.rs
src/whatsapp/: client.rs  mod.rs  types.rs
whatsapp-service/: README.md  package-lock.json  package.json  server.js
zaptui-rust/src/: config.rs  main.rs
zaptui-rust/src/ui/: app.rs  theme.rs
zaptui-rust/src/whatsapp/: client.rs
zaptui-rust/whatsapp-service/: server.js
(+4 files in other folders)
